--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-vue": "^4.0.0",
+    "node-sass": "^4.9.3",
     "nodemon": "^1.11.0",
+    "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2"
   }
