--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
     "vue": "^2.5.17",
+    "vue-i18n": "^8.1.0",
     "vuetify": "^1.2.4"
   },
   "devDependencies": {
