--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "aos": "^3.0.0-beta.5",
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
     "vue": "^2.5.17",
