--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
     "aos": "^3.0.0-beta.5",
+    "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
     "vue": "^2.5.17",
     "vue-i18n": "^8.1.0",
-    "vuetify": "^1.2.4"
+    "vuetify": "^1.2.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
