--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "@nuxtjs/sitemap": "^0.1.1",
     "aos": "^3.0.0-beta.5",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
