--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
     "vue": "^2.5.17",
+    "vue-clazy-load": "^0.4.2",
     "vue-i18n": "^8.1.0",
     "vuetify": "^1.2.4",
     "vuex": "^3.0.1"
